# pydantic-string-url

./: .gitignore  README.md  example.py  format.sh  lint.sh  publish.sh  pyproject.toml
.github/workflows/: linting.yml  tests.yml
pydantic_string_url/: __init__.py
tests/: test_url.py
